attempted to fix mobile window shifting issues.

--- a/style.css
+++ b/style.css
@@ -254,6 +254,8 @@ input {
     width: 12em;
     top: 50%;
     left: 30%
+
+    
 }
 
 input[type="range"] {
@@ -323,12 +325,26 @@ input[type="range"]::-moz-range-thumb {
     /*hide original SELECT element: */
 }
 
+.aboutsettings {
+    justify-content: center;
+}
+
+
+
 
 @media screen and (max-width: 810px) {
 
-    #timer_menu {
+    /* html, body {
+        overflow-x: hidden;
+    } */
+    /* body {
+        position: relative;
+        
+    } */
+
+    #timer_menu, #settings_menu, #audio_settings_menu, #about_menu  {
         width: 100%;
-        height: 100%;
+        height: 90%;
 
         position: absolute;
 
@@ -337,38 +353,6 @@ input[type="range"]::-moz-range-thumb {
         transform: (0,0);
     }
 
-    #settings_menu {
-        width: 100%;
-        height: 100%;
-
-        position: absolute;
-
-        top: 0;
-
-        transform: (0,0);
-    }
-
-    #audio_settings_menu {
-        width: 100%;
-        height: 100%;
-
-        position: absolute;
-
-        top: 0;
-
-        transform: (0,0);
-    }
-
-    #about_menu {
-        width: 100%;
-        height: 100%;
-
-        position: absolute;
-
-        top: 0;
-
-        transform: (50%,0);
-    }
 
     .windowbody {
         height: 100%;
@@ -383,5 +367,15 @@ input[type="range"]::-moz-range-thumb {
         top: 0;
 
         transform: (0,0);
+    }
+
+    input {
+        height: 32px;
+        width: 48px;
+        margin-top: -1px;
+    }
+
+    .setting {
+        padding: 8px;
     }
 }
